# api-transcription

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: deploy_uv.yml
app/: main.py  utils.py
bruno/: bruno.json  bruno_env.json  health.bru  swagger-ui.bru  transcribe.bru
