[project]
name = "api-transcription"
version = "1.0.0"
description = "API de transcripción Whisper con FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "openai-whisper",
    "ffmpeg-python",
]

[build-system]
requires = ["setuptools", "wheel"]